cmake_minimum_required(VERSION 3.16)
project( FindEllipse )
find_package( OpenCV REQUIRED )
find_package( ROOT 6.18 CONFIG REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -g")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")

ADD_LIBRARY( featurereco_lib Configuration.cpp ellipse.cpp hough_ellipse.cpp distance_to_ellipse.cpp PMTIdentified.cpp MedianTextReader.cpp ellipse_intersection.cpp featureFunctions.cpp)
include_directories( ${OpenCV_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
add_executable( FindEllipse find_ellipses.cpp )
target_link_libraries( FindEllipse featurereco_lib ${OpenCV_LIBS} ${ROOT_LIBS} ROOT::Core ROOT::Hist ROOT::Graf)

project( blobDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
add_executable( blobDetection blobDetection.cpp )
target_link_libraries( blobDetection ${OpenCV_LIBS} )
